backend/server.log
+ exec gosu vibecode scripts/start --hot
Installing dependencies and generating Prisma client...
[0.03ms] ".env"
bun install v1.2.19 (aad3abea)

$ prisma generate
Environment variables loaded from .env
Prisma schema loaded from prisma/schema.prisma
┌─────────────────────────────────────────────────────────┐
│  Update available 6.17.1 -> 7.0.1                       │
│                                                         │
│  This is a major update - please follow the guide at    │
│  https://pris.ly/d/major-version-upgrade                │
│                                                         │
│  Run the following to update                            │
│    npm i --save-dev prisma@latest                       │
│    npm i @prisma/client@latest                          │
└─────────────────────────────────────────────────────────┘

✔ Generated Prisma Client (v6.17.1) to ./generated/prisma in 233ms

Start by importing your Prisma Client (See: https://pris.ly/d/importing-client)

Tip: Want to turn off tips and other hints? https://pris.ly/tip-4-nohints


Checked 760 installs across 702 packages (no changes) [2.47s]
Starting server in dev mode with hot reload...
$ NODE_ENV=development bun run --hot src/index.ts
Failed to find Response internal state key
✅ Environment variables validated successfully
🔐 [Auth] Initializing Better Auth...
✅ [Auth] Better Auth initialized
🔗 [Auth] Base URL: https://preview-tmwrtdwhufry.share.sandbox.dev
🌐 [Auth] Trusted origins: vibecode://, http://localhost:3000, https://preview-tmwrtdwhufry.share.sandbox.dev
📁 [Upload] Uploads directory exists: /home/user/workspace/backend/uploads
🔧 Initializing Hono application...
🔐 Mounting Better Auth handler at /api/auth/*
📁 Serving static files from uploads/ directory
📤 Mounting upload routes at /api/upload
📝 Mounting sample routes at /api/sample
⚙️  Starting server...
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
📍 Environment: development
🚀 Server is running on port 3000
🔗 Base URL: http://localhost:3000
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

📚 Available endpoints:
  🔐 Auth:     /api/auth/*
  📤 Upload:   POST /api/upload/image
  📝 Sample:   GET/POST /api/sample
  💚 Health:   GET /health
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Failed to find Response internal state key
✅ Environment variables validated successfully
🔐 [Auth] Initializing Better Auth...
✅ [Auth] Better Auth initialized
🔗 [Auth] Base URL: https://preview-tmwrtdwhufry.share.sandbox.dev
🌐 [Auth] Trusted origins: vibecode://, http://localhost:3000, https://preview-tmwrtdwhufry.share.sandbox.dev
📁 [Upload] Uploads directory exists: /home/user/workspace/backend/uploads
🔧 Initializing Hono application...
🔐 Mounting Better Auth handler at /api/auth/*
📁 Serving static files from uploads/ directory
📤 Mounting upload routes at /api/upload
📝 Mounting sample routes at /api/sample
⚙️  Starting server...
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
📍 Environment: development
🚀 Server is running on port 3000
🔗 Base URL: http://localhost:3000
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

📚 Available endpoints:
  🔐 Auth:     /api/auth/*
  📤 Upload:   POST /api/upload/image
  📝 Sample:   GET/POST /api/sample
  💚 Health:   GET /health
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Failed to find Response internal state key
✅ Environment variables validated successfully
🔐 [Auth] Initializing Better Auth...
✅ [Auth] Better Auth initialized
🔗 [Auth] Base URL: https://preview-tmwrtdwhufry.share.sandbox.dev
🌐 [Auth] Trusted origins: vibecode://, http://localhost:3000, https://preview-tmwrtdwhufry.share.sandbox.dev
📁 [Upload] Uploads directory exists: /home/user/workspace/backend/uploads
🔧 Initializing Hono application...
🔐 Mounting Better Auth handler at /api/auth/*
📁 Serving static files from uploads/ directory
📤 Mounting upload routes at /api/upload
📝 Mounting sample routes at /api/sample
⚙️  Starting server...
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
📍 Environment: development
🚀 Server is running on port 3000
🔗 Base URL: http://localhost:3000
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

📚 Available endpoints:
  🔐 Auth:     /api/auth/*
  📤 Upload:   POST /api/upload/image
  📝 Sample:   GET/POST /api/sample
  💚 Health:   GET /health
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Failed to find Response internal state key
✅ Environment variables validated successfully
🔐 [Auth] Initializing Better Auth...
✅ [Auth] Better Auth initialized
🔗 [Auth] Base URL: https://preview-tmwrtdwhufry.share.sandbox.dev
🌐 [Auth] Trusted origins: vibecode://, http://localhost:3000, https://preview-tmwrtdwhufry.share.sandbox.dev
📁 [Upload] Uploads directory exists: /home/user/workspace/backend/uploads
🔧 Initializing Hono application...
🔐 Mounting Better Auth handler at /api/auth/*
📁 Serving static files from uploads/ directory
📤 Mounting upload routes at /api/upload
📝 Mounting sample routes at /api/sample
⚙️  Starting server...
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
📍 Environment: development
🚀 Server is running on port 3000
🔗 Base URL: http://localhost:3000
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

📚 Available endpoints:
  🔐 Auth:     /api/auth/*
  📤 Upload:   POST /api/upload/image
  📝 Sample:   GET/POST /api/sample
  💚 Health:   GET /health
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

1 | (function (entry, fetcher)
              ^
SyntaxError: Export named 'endGameRequestSchema' not found in module '/home/user/workspace/shared/contracts.ts'.
      at loadAndEvaluateModule (1:11)
1 | (function (entry, fetcher)
              ^
SyntaxError: Export named 'endGameRequestSchema' not found in module '/home/user/workspace/shared/contracts.ts'.
      at loadAndEvaluateModule (1:11)
error: Cannot find module './routes/upload' from '/home/user/workspace/backend/src/index.ts'
1 | (function (entry, fetcher)
              ^
SyntaxError: Export named 'endGameRequestSchema' not found in module '/home/user/workspace/shared/contracts.ts'.
      at loadAndEvaluateModule (1:11)
1 | (function (entry, fetcher)
              ^
SyntaxError: Export named 'endGameRequestSchema' not found in module '/home/user/workspace/shared/contracts.ts'.
      at loadAndEvaluateModule (1:11)
1 | (function (entry, fetcher)
              ^
SyntaxError: Export named 'endGameRequestSchema' not found in module '/home/user/workspace/shared/contracts.ts'.
      at loadAndEvaluateModule (1:11)
1 | (function (entry, fetcher)
              ^
SyntaxError: Export named 'endGameRequestSchema' not found in module '/home/user/workspace/shared/contracts.ts'.
      at loadAndEvaluateModule (1:11)
